crates/nash-driver/tests/snapshots/bundled_base__decode_list_rejects_function_elements.snap
---
source: crates/nash-driver/tests/bundled_base.rs
description: "module Main exposing (..)\nbad : Data -> option (list (int -> int))\nbad = decode\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Storable` in the annotation for `bad`:
   ╭─[/app/src/Main.nash:2:29]
 1 │ module Main exposing (..)
 2 │ bad : Data -> option (list (int -> int))
   ·                             ──────────
 3 │ bad = decode
   ╰────
  help: The type has `Term` representation, but `Storable` admits Big or Const types.
        Change the type or the representation requirement.
