crates/nash-driver/tests/snapshots/bundled_base__decoder_list_rejects_function_elements.snap
---
source: crates/nash-driver/tests/bundled_base.rs
description: "module Main exposing (..)\nfunctions : Data.Decode.decoder (int -> int)\nfunctions = pure (\\x -> x)\nbad = Data.Decode.list functions\n"
info: diagnostic
---
nash::type::missing_impl

  × Unsatisfied representation constraint `Storable (int -> int)`.
   ╭─[/app/src/Main.nash:4:7]
 3 │ functions = pure (\x -> x)
 4 │ bad = Data.Decode.list functions
   ·       ────────┬───────
   ·               ╰── required by `type application`
   ╰────
  help: Requirement chain:

            forming list (int -> int)

        Use a type with Big or Const representation; an impl cannot change representation.

nash::type::missing_impl

  × Unsatisfied representation constraint `Storable (int -> int)`.
   ╭─[/app/src/Main.nash:4:7]
 3 │ functions = pure (\x -> x)
 4 │ bad = Data.Decode.list functions
   ·       ────────┬───────
   ·               ╰── required by `list`
   ╰────
  help: Use a type with Big or Const representation; an impl cannot change representation.
