crates/nash-driver/tests/snapshots/bundled_base__list_lower_does_not_convert_elements.snap
---
source: crates/nash-driver/tests/bundled_base.rs
description: "module Main exposing (..)\nbad : List Int -> list int\nbad values = lower values\n"
info: diagnostic
---
nash::type::missing_impl

  × No impl for `Lift (list int) (List Int)`.
   ╭─[/app/src/Main.nash:3:14]
 2 │ bad : List Int -> list int
 3 │ bad values = lower values
   ·              ──┬──
   ·                ╰── required by `lower`
   ╰────
  help: Available impl heads:

            (option 'a0) (Option 'a0)
            ordering Ordering
            bool Bool
            bytes Bytes

        …

        Import or define an impl for `Lift (list int) (List Int)`.
