crates/nash-driver/tests/snapshots/bundled_base__map_lift_rejects_inferred_native_pair_components.snap
---
source: crates/nash-driver/tests/bundled_base.rs
description: "module Main exposing (..)\nasMap : Map Int (List Data) -> Map Int (List Data)\nasMap value = value\nbad value = asMap (lift [Builtin.unConstrData value])\n"
info: diagnostic
---
nash::type::missing_impl

  × No impl for `Lift (list (pair int (list Data))) (Map Int (List Data))`.
   ╭─[/app/src/Main.nash:4:20]
 3 │ asMap value = value
 4 │ bad value = asMap (lift [Builtin.unConstrData value])
   ·                    ──┬─
   ·                      ╰── required by `lift`
   ╰────
  help: Available impl heads:

            (option 'a0) (Option 'a0)
            ordering Ordering
            bool Bool
            bytes Bytes

        …

        Import or define an impl for `Lift (list (pair int (list Data))) (Map Int (List Data))`.
