crates/nash-driver/tests/snapshots/bundled_base__map_lift_rejects_native_keys.snap
---
source: crates/nash-driver/tests/bundled_base.rs
description: "module Main exposing (..)\nbad : list (pair int Data) -> Map int Data\nbad entries = lift entries\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Big` in the annotation for `bad`:
   ╭─[/app/src/Main.nash:2:35]
 1 │ module Main exposing (..)
 2 │ bad : list (pair int Data) -> Map int Data
   ·                                   ───
 3 │ bad entries = lift entries
   ╰────
  help: The type has `Const` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
