crates/nash-driver/tests/snapshots/bundled_base__map_lift_rejects_native_pair_components.snap
---
source: crates/nash-driver/tests/bundled_base.rs
description: "module Main exposing (..)\nbad : Data -> Map int (list Data)\nbad value = lift [Builtin.unConstrData value]\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Big` in the annotation for `bad`:
   ╭─[/app/src/Main.nash:2:19]
 1 │ module Main exposing (..)
 2 │ bad : Data -> Map int (list Data)
   ·                   ───
 3 │ bad value = lift [Builtin.unConstrData value]
   ╰────
  help: The type has `Const` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
