crates/nash-driver/tests/snapshots/bundled_base__map_singleton_rejects_little_components.snap
---
source: crates/nash-driver/tests/bundled_base.rs
description: "module Main exposing (..)\nbad : int -> Data -> list (pair int Data)\nbad key value = Map.singleton key value\n"
info: diagnostic
---
nash::type::missing_impl

  × Unsatisfied representation constraint `Big int`.
   ╭─[/app/src/Main.nash:3:17]
 2 │ bad : int -> Data -> list (pair int Data)
 3 │ bad key value = Map.singleton key value
   ·                 ──────┬──────
   ·                       ╰── required by `singleton`
   ╰────
  help: Use a type with Big representation; an impl cannot change representation.
